force-app/main/default/objects/Tramo__c/Tramo__c.object-meta.xml
<CustomObject>
    <label>Tramo</label>
    <nameField>
        <label>Nombre del tramo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tramos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>