force-app/main/default/objects/Tramo__c/fields/Consumo_hasta_L__c.field-meta.xml
<CustomField>
    <fullName>Consumo_hasta_L__c</fullName>
    <label>Consumo hasta L</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>