force-app/main/default/objects/Tramo__c/fields/Dto_Kg__c.field-meta.xml
<CustomField>
    <fullName>Dto_Kg__c</fullName>
    <label>Dto. Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>