force-app/main/default/objects/Tramo__c/fields/Dto_L__c.field-meta.xml
<CustomField>
    <fullName>Dto_L__c</fullName>
    <label>Dto. L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>