force-app/main/default/objects/Tramo__c/fields/Duracion_descuento__c.field-meta.xml
<CustomField>
    <fullName>Duracion_descuento__c</fullName>
    <label>Duración descuento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>