force-app/main/default/objects/Tramo__c/fields/Financiacion_en_gas_en_E_L__c.field-meta.xml
<CustomField>
    <fullName>Financiacion_en_gas_en_E_L__c</fullName>
    <label>Financiación en gas en €/L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>