force-app/main/default/objects/Tramo__c/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <description>Gross Profit</description>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>