force-app/main/default/objects/Tramo__c/fields/PBA__c.field-meta.xml
<CustomField>
    <fullName>PBA__c</fullName>
    <label>PBA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>