force-app/main/default/objects/Tramo__c/fields/Porcentaje_hasta__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_hasta__c</fullName>
    <label>Porcentaje hasta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>