force-app/main/default/objects/Tramo__c/fields/Precio_HOY_Kg__c.field-meta.xml
<CustomField>
    <fullName>Precio_HOY_Kg__c</fullName>
    <label>Precio HOY Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>