force-app/main/default/objects/Tramo__c/fields/Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto__c</fullName>
    <label>Presupuesto</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Tramos</relationshipLabel>
    <relationshipName>Tramos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>