force-app/main/default/objects/Tramo__c/fields/Prima_servicios_A__c.field-meta.xml
<CustomField>
    <fullName>Prima_servicios_A__c</fullName>
    <label>Prima servicios A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>