force-app/main/default/objects/Tramo__c/fields/TIR__c.field-meta.xml
<CustomField>
    <fullName>TIR__c</fullName>
    <label>TIR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>