force-app/main/default/objects/Tramo__c/recordTypes/Tramo_escalado.recordType-meta.xml
<RecordType>
    <fullName>Tramo_escalado</fullName>
    <active>true</active>
    <label>Tramo escalado</label>
</RecordType>