force-app/main/default/objects/Tramo__c/recordTypes/Tramo_normal.recordType-meta.xml
<RecordType>
    <fullName>Tramo_normal</fullName>
    <active>true</active>
    <label>Tramo normal</label>
</RecordType>